--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,9 +1,11 @@
 ToDo for ARGO Time Series Software:
+- Fix screen switches so user can see the “Loading” screen
+	- To have real time updating progress bar, I think I have to 
+	do multithreaded programming. This is too much time for now, 
+	it will stay as is
+- Test with actual use paths instead of fake testing paths
+    - Allow user to edit save paths with browse window?
+- Does TimeSeries work in non-Pacific ?
 
-- Wait for feedback from Tetjana before proceeding on these.
-	- Fix screen switches so user can see the “Loading” screen
-		- To have real time updating progress bar, I think I have to 
-		domultithreaded programming. This is too much time for now, 
-		it will stay as is
-	- Test with actual use paths instead of fake testing paths
-	    - Allow user to edit save paths with browse window?
+ToDo for ARGO Circulation Software:
+- Contour plotting section
